fix(frontend): fixed project container width for horizontal alignment

--- a/sprinto.client/app/styles/items.css
+++ b/sprinto.client/app/styles/items.css
@@ -124,8 +124,8 @@ span.ant-popconfirm-message-icon {
 }
 
 .project-container {
-  min-width: 430px;
-  max-width: 430px;
+  /* min-width: 430px;
+  max-width: 430px; */
   max-height: 680px;
   overflow-y: hidden;
   padding: 6px 10px 14px 10px;
